# vegaRead

./: README.md  makefile  package.json  tailwind.config.js  todo.md  vite.config.ts
.github/workflows/: release.yml
design/: design.md
docs/: backend.md  database.md  frontend.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260220045046_00_migration.sql  queries.rs  schema.sql
src-tauri/script/: db_migration.sh
src-tauri/src/: db.rs  epub.rs  epub_util.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  util.rs
src/api/: tauri.ts
src/components/common/: BookCover.tsx
src/components/layout/: AppShell.tsx
src/components/reader/: BookContent.tsx  FocusOverlay.tsx  ReadingTopbar.tsx  ReadingView.tsx  SettingsPanel.tsx  SpineList.tsx
src/components/ui/: ErrorToast.tsx  ImportModal.tsx
src/hooks/: useTauriDragDrop.ts
src/types/: index.ts
src/utils/: speedReader.ts
